[package]
name = "paserk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust implementation of the PASERK specification (COMING SOON)"
homepage = "https://github.com/rrrodzilla/paserk"
repository = "https://github.com/rrrodzilla/paserk"
authors = ["Roland Rodriguez <rrrodzilla@protonmail.com>"]
keywords = ["paseto", "paserk", "security", "cryptography", "authentication"]
categories = [
  "encoding",
  "web-programming",
  "parsing",
  "cryptography",
  "authentication",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
